--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.13",
+    "@ai-sdk/openai": "^0.0.13",
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "ai": "^3.1.9",
+    "axios": "^1.6.8",
+    "formidable": "^3.5.1",
+    "next": "14.2.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "^20.12.12",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "chalk": "^5.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
